--- a/ubuntu_20_04/.gitconfig
+++ b/ubuntu_20_04/.gitconfig
@@ -6,6 +6,7 @@
 [core]
     eol = lf
     filemode = true
+	autocrlf = input
 [alias]
     logdog = log --decorate --oneline --graph
     cf = cat-file -p
